# microsoftMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  autentichate.py  exemple.json  gemini.md  pyproject.toml
microsoft_mcp/: __initi__.py  auth.py  graph.py  tools.py
src/: autentichate.py
src/microsoft_mcp/: auth.py  server.py  tools.py
