[tool.poetry]
name = "microsoft-mcp"
version = "0.1.0"
description = "MCP Server for Microsoft Graph API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "microsoft_mcp"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
fastmcp = "^2.12.4"
msal = "^1.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main"

[tool.poetry.scripts]
microsoft-mcp = "microsoft_mcp.server:main"